--- a/app/src/main/res/layout/activity_main_to_do.xml
+++ b/app/src/main/res/layout/activity_main_to_do.xml
@@ -24,12 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
         android:ems="10"
         android:id="@+id/etNewItem"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:hint="Add Item"/>
+        android:hint="Please add an item"/>
 
     <Button
         android:text="Add Item"
