--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -3,18 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_weight="5">
+    android:layout_weight="10">
     <TextView
         android:id="@+id/todoBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_weight="3.5"/>
+        android:layout_weight="7"/>
 
     <TextView
         android:id="@+id/todoPriority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_weight="1.5"/>
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_weight="3"
+        android:gravity="right" />
 </LinearLayout>
