--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -3,19 +3,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_weight="10">
-    <TextView
-        android:id="@+id/todoBody"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_weight="7"/>
+    android:weightSum="5"
+    android:paddingBottom="5dp">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="4"
+        android:padding="2dp"
+        android:weightSum="7">
+        <TextView
+            android:id="@+id/todoBody"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_weight="4.2"
+            android:ellipsize="end"
+            android:maxLines="1"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.5"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/todoDueTV"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/due"/>
+            <TextView
+                android:id="@+id/todoDueDate"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
+            </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/todoPriority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_weight="3"
-        android:gravity="right" />
+        android:gravity="center"
+        android:layout_weight="1"/>
 </LinearLayout>
