--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,9 +19,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-
-    <!--<style name="Dialog.FullScreen" parent="Theme.AppCompat.Dialog">-->
-    <!--<item name="android:padding">0dp</item>-->
-    <!--<item name="android:windowBackground">@android:color/white</item>-->
-    <!--</style>-->
+    <style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/button</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
