--- a/app/src/main/res/layout/content_to_do_list.xml
+++ b/app/src/main/res/layout/content_to_do_list.xml
@@ -11,13 +11,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.todoapp.MainToDoActivity"
+    tools:context="com.todoapp.activities.MainToDoActivity"
     tools:showIn="@layout/activity_to_do_list">
 
     <ListView
         android:id="@+id/lvItems"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="@dimen/divider_height"/>
 
 </RelativeLayout>
