--- a/app/src/main/res/layout/fragment_edit_todo.xml
+++ b/app/src/main/res/layout/fragment_edit_todo.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="4dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingTop="@dimen/top_padding"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@color/background">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvTodo"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="@dimen/padding_two"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <EditText
@@ -26,7 +26,7 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="5dp" />
+        android:layout_height="@dimen/space" />
 
     <TextView
         android:text="@string/priority"
@@ -37,7 +37,7 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="5dp" />
+        android:layout_height="@dimen/space" />
 
     <RadioGroup
         android:id="@+id/priorityGroup"
@@ -68,7 +68,7 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="5dp" />
+        android:layout_height="@dimen/space" />
 
     <RelativeLayout
         android:layout_width="match_parent"
