--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -4,30 +4,30 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:weightSum="5"
-    android:paddingBottom="5dp">
+    android:paddingBottom="@dimen/space">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/zero"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="4"
-        android:padding="2dp"
+        android:padding="@dimen/padding_two"
         android:weightSum="7">
         <TextView
             android:id="@+id/todoBody"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/zero"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_weight="4.2"
             android:ellipsize="end"
             android:maxLines="1"/>
         <Space
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/zero"
             android:layout_weight="0.3"
             />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/zero"
             android:layout_weight="2.5"
             android:orientation="horizontal">
 
@@ -47,7 +47,7 @@
 
     <TextView
         android:id="@+id/todoPriority"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/zero"
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:gravity="center"
